We need the Plone version for sub commands.

--- a/mauritsbobtemplates/addon/.mrbob.ini
+++ b/mauritsbobtemplates/addon/.mrbob.ini
@@ -26,6 +26,10 @@ package.git.init.post_ask_question = mrbob.hooks:validate_choices mrbob.hooks:to
 package.git.init.choices = y|n
 package.git.init.choices_delimiter = |
 
+plone.version.question = Plone version
+plone.version.help = Which Plone version would you like to use?
+plone.version.default = 6.0.5
+
 python.version.question = Python version for virtualenv
 python.version.help = Which Python version would you like to use for the virtualenv to create?
 python.version.default = python3.11
